# patchelfy

./: .gitignore  pyproject.toml
patchelfy/: __init__.py
